# dizidler

./: .gitignore  .gitmodules  README.md
assets/: XMI2MID.BAT  cpassets.sh  dosbox_cycles_max.conf
cmake/: CMakeLists.txt  start.sh
src/: Camera.cpp  Camera.hpp  Color.hpp  Colors.hpp  Constants.hpp  FrameCounter.cpp  FrameCounter.hpp  Game.cpp  Game.hpp  IOHandler.cpp  IOHandler.hpp  Loading.cpp  MidiPlayer.cpp  MidiPlayer.hpp  Position.hpp  Shape.cpp  Shape.hpp  Stage.hpp  Subsystems.cpp  Subsystems.hpp  SwdWldData.cpp  SwdWldData.hpp  Translation.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  WorldDatData.cpp  WorldDatData.hpp  main.cpp
vs/: dizidler.sln  dizidler.vcxproj  dizidler.vcxproj.filters
